# TUITASK

./: README.md  launch.bat  pyproject.toml  tuitask.db  users.json  verify_hierarchy.py  version.md
alembic/: env.py
alembic/versions/: fab8ecee73a0_initial_migration_v0_7_0.py
memory/: agent_instructions.md  errors.md  memory_bank.md  roadmap.md  style_guide.md
scripts/: install.ps1  install.sh
tuitask/: __init__.py  app.py  styles.tcss
tuitask/components/: calendar.py  navigation.py  panels.py
tuitask/db/: engine.py
tuitask/db/crud/: phases.py  projects.py  tasks.py
tuitask/models/: phase.py  project.py  task.py  user.py
tuitask/ui/: theme.tcss
tuitask/ui/screens/: create_modal.py  tasks.py
tuitask/ui/widgets/: footer.py  header.py  phases.py  projects.py  task_card.py  tasks_cards.py  tasks_shared.py  tasks_table.py  tasks_toolbar.py
tuitask/viewmodels/: tasks_viewmodel.py
tuitask/views/: dashboard.py  main_screen.py  modals.py  tasks.py
